force-app/main/default/objects/Project_Resource__c/fields/Degin__c.field-meta.xml
<CustomField>
    <fullName>Degin__c</fullName>
    <label>Degin</label>
    <length>25</length>
    <type>Text</type>
</CustomField>