force-app/main/default/objects/Project_Resource__c/fields/Project2__c.field-meta.xml
<CustomField>
    <fullName>Project2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project2</label>
    <referenceTo>Project2__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>