force-app/main/default/objects/Project_Resource__c/fields/Rate_hour__c.field-meta.xml
<CustomField>
    <fullName>Rate_hour__c</fullName>
    <label>Rate/hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>