force-app/main/default/objects/Project_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Project2__c</columns>
    <columns>Degin__c</columns>
    <columns>Rate_hour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>